Bug 133350 - Cannot click a drop-down button when the control is on the overflow pop-up.
Summary: Cannot click a drop-down button when the control is on the overflow pop-up.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard:
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Toolbars-Overflow
  Show dependency treegraph
 
Reported: 2020-05-24 14:59 UTC by typingcat
Modified: 2023-03-24 14:25 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Overflow window (155.25 KB, image/png)
2020-05-24 14:59 UTC, typingcat
Details

Note You need to log in before you can comment on or make changes to this bug.
Description typingcat 2020-05-24 14:59:12 UTC
Description:
If I move the second row of the toolbar to the right side of the first row, depending on the monitor size, part of the right toolbar cannot be shown and an overflow indicator (>>) is displayed. If I click it, a pop-up window appears that contain the items of the second row, things like the font names or the font sizes. But I cannot click the drop-down button.

Steps to Reproduce:
1. Move the second row of the toolbar to the right side of the first row.
2. Reduce the width of the window, so that the font size drop-down list will be in the overflow window (>>).
3. Try to click the drop-down button of the font size list.

Actual Results:
The overflow window disappears.

Expected Results:
Font size drop-down menu will be shown.


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
I tried the same thing on Linux (6.4.3.2), and this problem did not exist on Linux.

Version: 6.4.4.2 (x64)
Build ID: 3d775be2011f3886db32dfd395a6a6d1ca2630ff
CPU threads: 12; OS: Windows 10.0 Build 18363; UI render: GL; VCL: win; 
Locale: en-GB (en_GB); UI-Language: en-GB
Calc: CL
Comment 1 typingcat 2020-05-24 14:59:54 UTC
Created attachment 161235 [details]
Overflow window

Overflow window
Comment 2 Maxim Monastirsky 2020-06-05 07:00:02 UTC
Reproduced in:

Version: 6.4.4.2
Build ID: 3d775be2011f3886db32dfd395a6a6d1ca2630ff
CPU threads: 4; OS: Linux 5.6; UI render: default; VCL: x11; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

but not in:

Version: 6.1.6.3
Build ID: 5896ab1714085361c45cf540f76f60673dd96a72
CPU threads: 4; OS: Linux 5.6; UI render: default; VCL: x11; 
Locale: en-US (en_US.UTF-8); Calc: group threaded
Comment 3 Buovjaga 2020-06-14 12:50:34 UTC
Bibisected against gen with 6.3 repo to https://git.libreoffice.org/core/+/f21d2b48bd68424a96aa6cd5572e368208378291%5E!/
tdf#121723 vcl: leave popup mode on focus loss of toplevel windows

Interestingly, with kf5, this only started in (6.5 repo): https://git.libreoffice.org/core/+/ec554ac30236fa7949e9866d01319d4e3e88c983%5E!/
tdf#126607 Qt5 activate window before setFocus

Adding Cc: to Miklos Vajna
Comment 4 Miklos Vajna 2021-03-30 09:03:24 UTC
Fixed with https://cgit.freedesktop.org/libreoffice/core/commit/?id=d4ed266849b558b041acb740a18bd81fa39bc582 on master towards 7.2.