tdf#133350 vcl focus loss: fix unwanted cancel of non-menu popup

Regression from commit f21d2b48bd68424a96aa6cd5572e368208378291
(tdf#121723 vcl: leave popup mode on focus loss of toplevel windows,
2018-11-26), the original motivation was to cancel menu popus (toplevel
window menus, context menus).

Fix the unwanted cancel of ImplPopupFloatWin/ImplListBoxFloatingWindow
by restricting the cancel to menu floating windows. This keeps the
original bug fixed and allows setting e.g. the font size in the
toolbar's popup part.

Change-Id: Ida503d0c13dc5a96287bfa31b6c2ce9d4a53e940